<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/menu_rate_us"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/menu_contact_us"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/sign_out"
            android:title="@string/sign_out" />
    </group>

</menu>