<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/teal_200">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/menuslogan"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingBottom="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-black"
            android:paddingBottom="0dp"
            android:text="@string/farm"
            android:textColor="#2A8E2E"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-black"
            android:paddingBottom="0dp"
            android:text="@string/help"
            android:textColor="@color/purple_200"
            android:textSize="40sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/menuslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:elevation="2dp"
        android:fontFamily="@font/reemkufiregular"
        android:paddingTop="0dp"
        android:text="@string/farming_made_easy"
        android:textSize="18sp" />


</RelativeLayout>